# ShiGu-foxy

base_controller/: CMakeLists.txt  package.xml
base_controller/msg/: Mymsg.msg
base_controller/src/: base_controller.cpp
coordinate_transform/: CMakeLists.txt  package.xml
coordinate_transform/src/: gps_valid.cpp
data_store/: CMakeLists.txt  package.xml
gps_common/: CMakeLists.txt  package.xml
gps_common/src/: gps2odom.cpp
robot_teleop/: package.xml
serial_gps/: CMakeLists.txt  package.xml
serial_gps/src/: serial_gps.cpp
serial_imu/: CMakeLists.txt  package.xml
shigu2_description/: CMakeLists.txt  package.xml
shigu2_description/meshes/: front_left_Link.STL  front_right_Link.STL  laser_Link.STL  lidar1_link.STL  rear_left_Link.STL  rear_right_Link.STL
shigu2_description/meshes/20210826/: base_link.STL  camera_Link.STL  front_left_Link.STL  front_right_Link.STL  gps_Link.STL  imu_Link.STL  laser_Link.STL  rear_left_Link.STL  rear_right_Link.STL
shigu2_description/urdf/: shigu.gv  shigu.urdf  shigu.urdf.xacro  shigu_20211014.urdf  shigu_20211019.urdf  shigu_bakeup.urdf
shigu2_gazebo/: CMakeLists.txt  package.xml
shigu2_gazebo/launch/: gazebo.launch  world.launch.py
shigu2_gazebo/worlds/: playpen_2.world
shigu2_navigation/: CMakeLists.txt  package.xml
shigu2_navigation/config/: shigu2_lds_2d.lua
shigu2_navigation/launch/: bringup_launch.py  cartographer.launch.py  localization_launch.py  navigation2.launch.py  navigation_launch.py  slam_launch.py
shigu2_navigation/map/: shigu2_map.pgm  shigu2_map.yaml
shigu2_rviz/: CMakeLists.txt  package.xml
